--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -11,7 +11,6 @@
     "Already registered?": "Já é cadastrado?",
     "Register": "Registrar",
     "Resend Verification Email": "Reenviar Verificação",
-    "Home": "Início",
     "Profile": "Perfil",
     "Log Out": "Sair",
     "Profile Information": "Informação de Perfil",
@@ -26,5 +25,15 @@
     "Are you sure you want to delete your account?":"Você tem certeza que quer excluir sua conta?",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.":"Quando sua conta for excluída, todos os seus recursos e dados serão excluídos permanentemente. Digite sua senha para confirmar que deseja excluir permanentemente sua conta.",
     "Cancel":"Cancelar",
-    "My Bills":"Minhas Contas"
+    "Dashboard": "Painel",
+    "My Bills":"Minhas Contas",
+    "Status":"Status",
+    "Expiration Date": "Data de Expiração",
+    "Value": "Valor",
+    "Edit": "Alterar",
+    "Hello, :name! Your account overview is available." : "Olá, :name! A visão geral do seu perfil está disponível.",
+    "Near Expiration":"Expiração Próxima",
+    "Paid":"Pagas",
+    "Pending":"Pendentes",
+    "Expired":"Expiradas"
 }
